@@ -1,5 +1,5 @@
 
-just a regular update
+just a regular update; small improvements and bugfixes, extra unit tests, etc.
 
 kind regards,
 Jesse
